# sftpython

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml  tests.yml
docs/: conf.py  index.rst
sftpython/: __init__.py
tests/: test_connection.py
