[tool.poetry]
name = "sftpython"
version = "0.1.0"
description = "A drop-in replacement for and improvement upon pysftp."
authors = ["Ben Green <benno.green@gmail.com>"]
readme = "README.md"
license = "BSD"
repository = "https://github.com/Pathfinder216/sftpython"
classifiers = [
    "Development Status :: 2 - Pre-Alpha"
]

[tool.poetry.dependencies]
python = ">=3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.11.5"
pylint = "^2.13.9"
sphinx = "^5.3.0"
myst-parser = "^1.0.0"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
allow_redefinition = true
install_types = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
